fixed: alignment of nav bar at the center

--- a/src/common/headerApp.css
+++ b/src/common/headerApp.css
@@ -116,13 +116,21 @@ body {
     padding: 0 2rem;
 }
 
+#main-header .nav-links {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+}
+
 #main-header nav ul {
   display: flex;
   list-style: none;
+  /* justify-content: center; */
 }
 
 #main-header nav ul li {
   margin-left: 1.5rem;
+  justify-content: center;
 }
 
 #main-header nav ul li a {
